@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
 <plugin>
 	<nom><multi>[fr]Recherche Multi-Crit&egrave;res[en]Multi Keywords Research</multi></nom>
 	<description>
@@ -32,7 +31,6 @@
 	<etat>dev</etat>
 	<auteur>Dom Lepaisant - d&apos;apr&egrave;s une contrib de <a href="http://www.netdeveloppeur.com/tutoriaux-et-astuces-spip/spip-recherche-multicriteres-article34.html">Paul Sanchez - NetDeveloppeur</a></auteur>
 	<icon>img_pack/rec_mc-48.png</icon>
-	<install>base/rec_mc_upgrade.php</install>
 	<pipeline>
 		<nom>ajouter_boutons</nom>
 		<action>ajouterBoutons</action>
