@@ -2,8 +2,9 @@ lcs-spip (2.4.8~3) Lcs; urgency=low
 
   * Fix rights on IMG and tmp in chown.sh
   * Update spip 2.1.10
+  * Fix bug in plugin.xml for tispip_skelet_lcs and recherche_multicriteres
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 21 Apr 2011 16:33:33 +0200
+ -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Sat, 23 Apr 2011 20:45:52 +0200
 
 lcs-spip (2.4.7.1~1) Lcs; urgency=low
 
